syntax = "proto3";

option go_package = ".;admin";

package admin;

service Admin {
  rpc AddOperationLog (AddOperationLogRequest) returns (AddOperationLogReply) {}
}

message AddOperationLogRequest {
  // 管理员id
  int64 administrator_id = 1;
  // 用户id 没有为0
  int64 user_id = 2;
  // 类型 用户1、动态2、消息3、群组4、相册5、话题6、评论7 帖子8
  int64 source_type = 3;
  // 来源id
  string source_id = 4;
  // 来源父id
  string parent_source_id = 5;
  // 操作结果
  string result = 6;
}

message AddOperationLogReply {
  int64 code = 1;
}